- Greatly improved performance of adding/importing large mods. - Added loading indicator during final stage of mod import per #8 - Fixed loading indicator getting stuck when an error occurs during mod deploy/undeploy. - Fixed issue with app serve hot reloading on networked mapped drives. - Fixed spinning direction on loading indicator per #7

--- a/src/app/modals/loading-indicator/loading-indicator.modal.scss
+++ b/src/app/modals/loading-indicator/loading-indicator.modal.scss
@@ -18,11 +18,11 @@
 
         @keyframes sync-rotate {
             from {
-                transform: rotateZ(0)
+                transform: rotateZ(359deg)
             }
 
             to {
-                transform: rotateZ(359deg);
+                transform: rotateZ(0);
             }
         }
     }
